--- a/cfp.html
+++ b/cfp.html
@@ -13,34 +13,18 @@
             </div>
             <div id="navigation">
                 <a href="./">Home</a>
+                <a href="./contact.html">Who</a>
                 <a href="./cfp.html">Call for Papers</a>
             </div>
         </div>
 
         <div id="content">
-            <h1 id="about-the-fp-miniconf">About the FP Miniconf</h1>
-<p>The linux.conf.au 2016 Functional Programming (FP) Miniconf will provide the opportunity for FP practitioners and people interested in FP to learn the concepts, tools and techniques of FP in a supportive environment, to be challenged in their thinking about programming and the tools of the craft, and to be inspired to embrace the advantages of FP in their workplaces and open source projects and communities.</p>
-<p><a href="https://en.wikipedia.org/wiki/Functional_programming"><em>Functional programming</em></a> is an approach to programming that models computation as the evaluation of mathematical functions. Drawing from fields of mathematics including <a href="https://en.wikipedia.org/wiki/Lambda_calculus">lambda calculus</a> and <a href="https://en.wikipedia.org/wiki/Category_theory">category theory</a>, FP emphasises <a href="https://en.wikipedia.org/wiki/Pure_function"><em>purity</em></a>, <a href="https://en.wikipedia.org/wiki/Immutable_object"><em>immutability</em></a>, <a href="https://en.wikipedia.org/wiki/Abstraction_%28computer_science%29"><em>abstraction</em></a> and <a href="https://en.wikipedia.org/wiki/Principle_of_compositionality"><em>composability</em></a> - qualities that underpin FP’s reputation of succinctness, comprehensibility and the ability to move fast and <em>not</em> break things.</p>
-<h2 id="a-little-background">A little background</h2>
-<p>In recent years awareness and use of functional programming has grown with the emergence of new languages (e.g. Scala, Clojure, Idris), ongoing advancement of older functional programming languages (e.g. OCaml, Haskell) and other languages adopting features to better facilitate functional programming (e.g. Java 8, C# 3.0).</p>
-<p>Some popular open source functional programming languages include:</p>
-<ul>
-<li><a href="https://www.haskell.org/">Haskell</a>: pure, lazy, statically typed</li>
-<li><a href="http://www.scala-lang.org/">Scala</a>: statically typed functional language for the JVM</li>
-<li><a href="http://clojure.org/">Clojure</a>: JVM Lisp dialect with powerful concurrency primitives</li>
-<li><a href="http://www.erlang.org/">Erlang</a>: dynamically typed with focus on fault tolerance and real-time applications</li>
-<li><a href="https://fsharp.org/">F#</a>: statically typed FP for Common Language Infrastructure</li>
-</ul>
-<p>Some well-known open source programs written in functional programming languages include:</p>
-<ul>
-<li><a href="http://xmonad.org/">xmonad</a> (window manager; Haskell)</li>
-<li><a href="http://git-annex.branchable.com/">git-annex</a> (Git-based archiving tool; Haskell)</li>
-<li><a href="https://couchdb.apache.org/">CouchDB</a> and <a href="https://github.com/basho/riak">Riak</a> (databases; Erlang)</li>
-<li><a href="http://pandoc.org/">Pandoc</a> (universal document converter; Haskell)</li>
-<li><a href="http://lichess.org/">Lichess</a> (Internet chess server; Scala)</li>
-</ul>
+            <h1 id="call-for-papers">Call for Papers</h1>
+<p>The inaugural Functional Programming Miniconf is being held during <a href="https://linux.conf.au/">linux.conf.au 2016</a>, the week of 1st - 5th February 2016 in <a href="https://linux.conf.au/about/geelong">Geelong, Victoria</a>.</p>
+<p>This one-day miniconf is for FP beginners and practitioners alike. Attendees will learn FP concepts, tools and techniques and be challenged to think about programming in new ways and embrace the benefits of FP in their workplaces and open source communities.</p>
+<p>If you have something interesting to share about FP, read on!</p>
 <h2 id="what-are-we-looking-for">What are we looking for?</h2>
-<p>We are looking for talks that will interest FP newcomers and experienced practitioners alike. Accordingly, we are unlikely to accept proposals that assume significant prior knowledge of FP, category theory, etc. As with the conference proper, all talks must relate in some way to free/open source software.</p>
+<p>We are looking for talks that will interest FP newcomers and experienced practitioners alike. linux.conf.au attendees have diverse programming and computing experience; accordingly we are unlikely to accept proposals that assume significant prior knowledge of FP, category theory, etc.</p>
 <p>In particular, we welcome proposals that:</p>
 <ul>
 <li>Teach FP concepts or techniques that are applicable in a variety of languages, including languages not normally considered “functional”.</li>
@@ -49,8 +33,12 @@
 <li>Demonstrate awesome open source programs or libraries written in a functional programming language and expound important aspects of their implementation.</li>
 <li>Educate attendees on how to learn or teach FP effectively.</li>
 </ul>
+<p>As with the conference proper, <em>all talks must relate to free/open source software</em> in some way.</p>
+<p>First-time speakers are encouraged to apply! If you would like help fleshing out an abstract or have any questions feel free to <a href="contact.html">contact the organisers</a>.</p>
 <h2 id="how-to-submit">How to submit</h2>
-<p>Email proposals to <code>frase@frase.id.au</code>. The standard talk duration is 30 minutes <em>including time for questions</em>.</p>
+<p>Email proposals to <code>frase@frase.id.au</code>.</p>
+<p>The submission deadline is <strong>Monday 9th November</strong>.</p>
+<p>The standard talk duration is 30 minutes <em>including time for questions</em>.</p>
 <p>Include the following in your proposal:</p>
 <ul>
 <li>Talk title</li>
@@ -60,9 +48,9 @@
 <p>This information will be used in the miniconf programme. If you wish you can include links or fancy formatting in your abstract by using ReStructured Text or Markdown.</p>
 <p>Please note the following important points:</p>
 <ul>
-<li>Speakers at the miniconf must <a href="https://linux.conf.au/">register for the main conference</a>.</li>
+<li>Speakers at the miniconf <strong>must</strong> <a href="https://linux.conf.au/">register for the main conference</a>.</li>
 <li>The FP Miniconf organisers are unable to provide financial assistance for travel or registration.</li>
-<li>All speakers and attendees are subject to the linux.conf.au <a href="https://linux.conf.au/register/code_of_conduct">Code of Conduct</a>.</li>
+<li>All speakers and attendees must abide by the linux.conf.au <a href="https://linux.conf.au/register/code_of_conduct">Code of Conduct</a>.</li>
 </ul>
         </div>
         <div id="footer">
