--- a/cfp.html
+++ b/cfp.html
@@ -25,13 +25,13 @@
 <p>If you have something interesting to share about FP, read on!</p>
 <h2 id="what-are-we-looking-for">What are we looking for?</h2>
 <p>We are looking for talks that will interest FP newcomers and experienced practitioners alike. linux.conf.au attendees have diverse programming and computing experience; accordingly we are unlikely to accept proposals that assume significant prior knowledge of FP, category theory, etc.</p>
-<p>In particular, we welcome proposals that:</p>
+<p>Here are some possible topic areas, to get the ideas flowing:</p>
 <ul>
-<li>Teach FP concepts or techniques that are applicable in a variety of languages, including languages not normally considered “functional”.</li>
-<li>Blow minds with emerging tools or techniques, and introduce the underlying theory.</li>
-<li>Clearly convey the benefits of FP for writing correct, maintainable and high performance software.</li>
-<li>Demonstrate awesome open source programs or libraries written in a functional programming language and expound important aspects of their implementation.</li>
-<li>Educate attendees on how to learn or teach FP effectively.</li>
+<li>Teach an FP concept that can be applied in a variety of langauges, including those not normally considered “functional”.</li>
+<li>Demonstrate an emerging programming tool or technique such as hole-driven development or proof search.</li>
+<li>Share your experience of learning or teaching FP, starting a meetup, or adopting FP in your workplace.</li>
+<li>Explain the benefits of FP for writing correct, maintainable and high performance software.</li>
+<li>Show how FP is used to build some awesome and/or well known free software program.</li>
 </ul>
 <p>As with the conference proper, <em>all talks must relate to free/open source software</em> in some way.</p>
 <p>First-time speakers are encouraged to apply! If you would like help fleshing out an abstract or have any questions feel free to <a href="contact.html">contact the organisers</a>.</p>
