--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 <li><a href="https://couchdb.apache.org/">CouchDB</a> and <a href="https://github.com/basho/riak">Riak</a> (databases; Erlang)</li>
 <li><a href="http://pandoc.org/">Pandoc</a> (universal document converter; Haskell)</li>
 <li><a href="http://lichess.org/">Lichess</a> (Internet chess server; Scala)</li>
+<li><a href="https://mirage.io">MirageOS</a> (Unikernel toolkit; OCaml)</li>
+<li><a href="https://www.ejabberd.im/">ejabberd</a> (XMPP server; Erlang)</li>
 </ul>
         </div>
         <div id="footer">
