--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="navigation">
                 <a href="./">Home</a>
                 <a href="./contact.html">Who</a>
-                <a href="./cfp.html">Call for Papers</a>
+                <a href="./cfp.html">CFP</a>
             </div>
         </div>
 
@@ -28,7 +28,7 @@
 <li>Deadline for proposals: <strong>November 9th</strong></li>
 <li>Speaker notification: <strong>December 7th</strong></li>
 <li>Final programme announcement: <strong>January 11th</strong></li>
-<li><strong>FP Miniconf</strong>: Monday February 1st or Tuesday February 2nd</li>
+<li><strong>FP Miniconf: Tuesday February 2nd</strong></li>
 </ul>
 <h1 id="about-fp">About FP</h1>
 <p><a href="https://en.wikipedia.org/wiki/Functional_programming"><em>Functional programming</em></a> is an approach to programming that models computation as the evaluation of mathematical functions. It draws from fields of math including <a href="https://en.wikipedia.org/wiki/Lambda_calculus">lambda calculus</a> and <a href="https://en.wikipedia.org/wiki/Category_theory">category theory</a> and emphasises <a href="https://en.wikipedia.org/wiki/Pure_function"><em>purity</em></a>, <a href="https://en.wikipedia.org/wiki/Immutable_object"><em>immutability</em></a>, <a href="https://en.wikipedia.org/wiki/Abstraction_%28computer_science%29"><em>abstraction</em></a> and <a href="https://en.wikipedia.org/wiki/Principle_of_compositionality"><em>composability</em></a>. These qualities underpin FP’s reputation for succinctness, comprehensibility and the ability to move fast and <em>not</em> break things.</p>
