--- a/cfp.html
+++ b/cfp.html
@@ -48,7 +48,7 @@
 <p>This information will be used in the miniconf programme. If you wish you can include links or fancy formatting in your abstract by using ReStructured Text or Markdown.</p>
 <p>Please note the following important points:</p>
 <ul>
-<li>Speakers at the miniconf <strong>must</strong> <a href="https://linux.conf.au/">register for the main conference</a>.</li>
+<li>Speakers at the miniconf <strong>must</strong> register for the conference. Miniconf-only registration is available from $90. Student, hobbyist and professional rates are available for the full conference. See the <a href="https://linux.conf.au/register/info">Registration Information</a> page for details.</li>
 <li>The FP Miniconf organisers are unable to provide financial assistance for travel or registration.</li>
 <li>All speakers and attendees must abide by the linux.conf.au <a href="https://linux.conf.au/register/code_of_conduct">Code of Conduct</a>.</li>
 </ul>
