--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <p>This one-day miniconf is for FP beginners and practitioners alike. Attendees will learn FP concepts, tools and techniques and be challenged to think about programming in new ways and embrace the benefits of FP in their workplaces and open source communities.</p>
 <h1 id="lineup">Lineup</h1>
 <p>We already have a few tricks up our sleeves, and will announce our fabulous keynote speaker(s) soon. But we also need you (yes, <em>you</em>!) If you have something interesting to say about FP - a tool you wrote, a handy library you discovered, your experiences learning or teaching FP - <strong><a href="cfp.html">submit a proposal</a></strong> to share the goodness!</p>
+<h1 id="registration">Registration</h1>
+<p>Conference registration is required to attend the miniconf. Miniconf-only registration is available <strong>from $90</strong>. Student, hobbyist and professional rates are available for the full conference. See the <a href="https://linux.conf.au/register/info">Registration Information</a> page for details.</p>
 <h1 id="important-dates">Important dates</h1>
 <ul>
 <li>Deadline for proposals: <strong>November 9th</strong></li>
