--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <li><a href="http://lichess.org/">Lichess</a> (Internet chess server; Scala)</li>
 <li><a href="https://mirage.io">MirageOS</a> (Unikernel toolkit; OCaml)</li>
 <li><a href="https://www.ejabberd.im/">ejabberd</a> (XMPP server; Erlang)</li>
+<li><a href="https://puppetlabs.com">Puppet</a> (configuration management; Clojure)</li>
 </ul>
         </div>
         <div id="footer">
