--- a/index.html
+++ b/index.html
@@ -19,19 +19,69 @@
         </div>
 
         <div id="content">
-            <p>The inaugural Functional Programming Miniconf is being held during <a href="https://linux.conf.au/">linux.conf.au 2016</a>, the week of 1st - 5th February 2016 in <a href="https://linux.conf.au/about/geelong">Geelong, Victoria</a>.</p>
+            <p>The inaugural Functional Programming Miniconf is being held on <strong>Tuesday 2nd February</strong> during <a href="https://linux.conf.au/">linux.conf.au 2016</a>, in <a href="https://linux.conf.au/about/geelong">Geelong, Victoria</a>.</p>
 <p>This one-day miniconf is for FP beginners and practitioners alike. Attendees will learn FP concepts, tools and techniques and be challenged to think about programming in new ways and embrace the benefits of FP in their workplaces and open source communities.</p>
-<h1 id="lineup">Lineup</h1>
-<p>We already have a few tricks up our sleeves, and will announce our fabulous keynote speaker(s) soon. But we also need you (yes, <em>you</em>!) If you have something interesting to say about FP - a tool you wrote, a handy library you discovered, your experiences learning or teaching FP - <strong><a href="cfp.html">submit a proposal</a></strong> to share the goodness!</p>
 <h1 id="registration">Registration</h1>
-<p>Conference registration is required to attend the miniconf. Miniconf-only registration is available <strong>from $90</strong>. Student, hobbyist and professional rates are available for the full conference. See the <a href="https://linux.conf.au/register/info">Registration Information</a> page for details.</p>
-<h1 id="important-dates">Important dates</h1>
-<ul>
-<li>Deadline for proposals: <strong>November 9th</strong></li>
-<li>Speaker notification: <strong>December 7th</strong></li>
-<li>Final programme announcement: <strong>January 11th</strong></li>
-<li><strong>FP Miniconf: Tuesday February 2nd</strong></li>
-</ul>
+<p>Registration is required to attend linux.conf.au, which runs from 1st - 5th February 2016. Miniconf-only registration is available <strong>from $90</strong>. Student, hobbyist and professional rates are available for the full conference. See the <a href="https://linux.conf.au/register/info">Registration Information</a> page for details.</p>
+<h1 id="schedule">Schedule</h1>
+<table>
+<colgroup>
+<col width="20%" />
+<col width="63%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="left">Time</th>
+<th align="left">Presentation</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">10:40 - 10:55</td>
+<td align="left">Miniconf open</td>
+</tr>
+<tr class="even">
+<td align="left">11:00</td>
+<td align="left"><em><a href="talks/essential-tools-of-open-source.html">The Essential Tools of Open-Source: Functional Programming, Parametricity, Types</a></em> by Tony Morris</td>
+</tr>
+<tr class="odd">
+<td align="left">11:50</td>
+<td align="left"><em><a href="talks/fp-in-python-with-toolz-and-fn.py.html">Functional programming in Python with Toolz and fn.py</a></em> by Juan Nunez-Iglesias</td>
+</tr>
+<tr class="even">
+<td align="left">12:20 - 13:20</td>
+<td align="left">LUNCH</td>
+</tr>
+<tr class="odd">
+<td align="left">13:20</td>
+<td align="left"><em><a href="talks/data-made-out-of-functions.html">Data made out of functions</a></em> by Ken Scambler</td>
+</tr>
+<tr class="even">
+<td align="left">13:55</td>
+<td align="left"><em><a href="talks/fp-in-javascript.html">The Emperor’s New Closure: FP in Javascript</a></em> by Nick Moore</td>
+</tr>
+<tr class="odd">
+<td align="left">14:30</td>
+<td align="left"><em><a href="talks/practical-functional-architecture.html">Practical Functional Architecture</a></em> by Jed Wesley-Smith</td>
+</tr>
+<tr class="even">
+<td align="left">15:00 - 15:40</td>
+<td align="left">AFTERNOON TEA</td>
+</tr>
+<tr class="odd">
+<td align="left">15:40</td>
+<td align="left"><em><a href="talks/swift-functional-programming.html">Swift Functional Programming</a></em> by Paris Buttfield-Addison</td>
+</tr>
+<tr class="even">
+<td align="left">16:15</td>
+<td align="left"><em><a href="talks/haskell-is-not-for-production-and-other-tales.html">Haskell is Not For Production and Other Tales</a></em> by Katie Miller</td>
+</tr>
+<tr class="odd">
+<td align="left">17:05 - 17:20</td>
+<td align="left"><strong>LIGHTNING TALKS</strong> and miniconf close</td>
+</tr>
+</tbody>
+</table>
 <h1 id="about-fp">About FP</h1>
 <p><a href="https://en.wikipedia.org/wiki/Functional_programming"><em>Functional programming</em></a> is an approach to programming that models computation as the evaluation of mathematical functions. It draws from fields of math including <a href="https://en.wikipedia.org/wiki/Lambda_calculus">lambda calculus</a> and <a href="https://en.wikipedia.org/wiki/Category_theory">category theory</a> and emphasises <a href="https://en.wikipedia.org/wiki/Pure_function"><em>purity</em></a>, <a href="https://en.wikipedia.org/wiki/Immutable_object"><em>immutability</em></a>, <a href="https://en.wikipedia.org/wiki/Abstraction_%28computer_science%29"><em>abstraction</em></a> and <a href="https://en.wikipedia.org/wiki/Principle_of_compositionality"><em>composability</em></a>. These qualities underpin FP’s reputation for succinctness, comprehensibility and the ability to move fast and <em>not</em> break things.</p>
 <p>In recent years awareness and use of functional programming has grown with the emergence of new languages (e.g. Scala, Clojure, Idris), ongoing advancement of older functional programming languages (e.g. OCaml, Haskell) and other languages adopting features to better facilitate functional programming (e.g. Java 8, C# 3.0).</p>
